account usecase and swagger updates
