# infrastructure/swagger/swagger.yaml
@@ -151,6 +151,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/domain.ResponseError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/domain.ResponseError'
         "500":
           description: Internal Server Error
           schema:
